# couch_hack_week

./: Cargo.toml  README.md
src/: constants.rs  couch.rs  defs.rs  fdb.rs  http.rs  lib.rs  main.rs  util.rs
tests/: errors.rs
