[package]
name = "couch_hack_week"
version = "0.1.0"
authors = ["Garren Smith <garren.smith@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
foundationdb = { git = "https://github.com/Clikengo/foundationdb-rs.git" }
futures = "0.3"
tokio = { version = "0.2", features = ["full"] }
hex = "0.4.2"
warp = "0.2"
serde = {version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
byteorder = "1.3.4"
